--- a/public/components/header.html
+++ b/public/components/header.html
@@ -18,9 +18,9 @@
                     <a href="/intro" class="menu__item-link">Intro</a>
                     <a href="/install-nodejs" class="menu__item-link">Install NodeJS</a>
                     <a href="/setup" class="menu__item-link">Project Setup</a>
-                    <a href="" class="menu__item-link">Terminal commands</a>
-                    <a href="" class="menu__item-link">Code snippets</a>
-                    <a href="" class="menu__item-link">Others</a>
+                    <a href="/commands" class="menu__item-link">Terminal commands</a>
+                    <a href="/scripts" class="menu__item-link">NPM Scripts</a>
+            
                 </ul>
             </div>
         </div>
